unpackaged/objects/Case.object
<CustomObject>
	<sharingModel>ReadWriteTransfer</sharingModel>
	<fields>
		<fullName>BugNumber__c</fullName>
		<label>Bug Number</label>
		<length>10</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Product__c</fullName>
		<label>Product</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Product A</fullName>
				</value>
				<value>
					<fullName>Product C</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>Version__c</fullName>
		<label>Version</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>2</fullName>
				</value>
				<value>
					<fullName>3</fullName>
				</value>
				<value>
					<fullName>3.5</fullName>
				</value>
				<value>
					<fullName>4</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<listViews>
		<fullName>AllOpenCases</fullName>
		<filterScope>Everything</filterScope>
		<filters>
			<field>CASES.CLOSED</field>
			<operation>equals</operation>
			<value>0</value>
		</filters>
		<label>All Open Cases</label>
	</listViews>
	<listViews>
		<fullName>FeatureRequestsBugs</fullName>
		<filterScope>Queue</filterScope>
		<label>Feature Requests/Bugs</label>
		<queue>FeatureRequestsBugs</queue>
	</listViews>
	<listViews>
		<fullName>Inboundinquiries</fullName>
		<filterScope>Queue</filterScope>
		<label>Inbound inquiries</label>
		<queue>Inboundinquiries</queue>
	</listViews>
	<listViews>
		<fullName>MyCases</fullName>
		<filterScope>Mine</filterScope>
		<label>My Cases</label>
	</listViews>
	<listViews>
		<fullName>MyOpenCases</fullName>
		<filterScope>Mine</filterScope>
		<filters>
			<field>CASES.CLOSED</field>
			<operation>equals</operation>
			<value>0</value>
		</filters>
		<label>My Open Cases</label>
	</listViews>
</CustomObject>